# MeetingMinds

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  main.py  pyproject.toml
src/MeetingMinds/: cleaner.py  diarizer.py  language_detector.py  pipeline.py  summarizer.py  transcriber.py
