[project]
name = "meetingminds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langdetect>=1.0.9",
    "openai-whisper>=20250625",
    "pyannote-audio>=3.3.2",
    "pydub>=0.25.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.3",
]
