[project]
name = "meetingminds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.39.7",
    "langchain>=0.3.26",
    "langchain-aws>=0.2.28",
    "langchain-community>=0.3.27",
    "langdetect>=1.0.9",
    "openai-whisper>=20250625",
    "pyannote-audio>=3.3.2",
    "pydub>=0.25.1",
]

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "pre-commit>=4.2.0",
    "ruff>=0.12.3",
]
